feat: blog style

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -20,38 +20,13 @@ header a {
   font-weight: bold;
   text-decoration: none;
 }
+h1 {
+  color: #222;
+}
+
 
 main {
   margin: 0 auto;
   width: 90vw;
-}
-
-.dashboard-header {
-  align-items: baseline;
-  background: #ddd;
-  display: flex;
-  font-size: 0.875rem;
-  justify-content: space-between;
-  margin: 0 -5vw;
-  padding: 0.5rem 5vw;
-}
-
-.dashboard-header a {
-  color: #222;
-  display: inline-block;
-  padding: 0.25rem 0.5rem;
-  text-decoration: none;
-}
-
-.dashboard-header a:hover:not(.active) {
-  background: #bbb;
-}
-
-.dashboard-header a.active {
-  background: #333;
-  color: white;
-}
-
-h1 {
-  color: #222;
+  max-width: 550px;
 }
