--- a/src/components/profile.css
+++ b/src/components/profile.css
@@ -1,5 +1,6 @@
 .user-name {
     font-size: 1rem;
+    color: #F7F7FF;
 }
 .logoutBtn {
     padding: 11px;
@@ -10,9 +11,9 @@
     border-radius: 5px;
 }
 .logoutBtn:hover {
-    background-color: #AF3B6E;
-    color: #FFDD4A;
+    background-color: #FFDD4A;
 }
+
 .profile-nav {
     display:flex;
     justify-content: space-evenly;
